syntax = "proto3";

package golem.auth;

enum EnvironmentRole {
  ENVIRONMENT_ROLE_ADMIN = 0;
  ENVIRONMENT_ROLE_VIEWER = 1;
  ENVIRONMENT_ROLE_DEPLOYER = 2;
}
